# ai_engineer_agent

./: .env.example  .gitignore  README.md  pyproject.toml
schedules/: cron_jobs.py
src/: cli.py  config.py  graph.py  state.py
src/agents/: __init__.py  builder.py  comms.py  data.py  solutions.py
src/prompts/: builder.md  comms.md  data.md  solutions.md
src/tools/: dbt.py  github.py  jira.py  outlook.py  slack.py  snowflake.py
