[project]
name = "ai-engineer-agent"
version = "0.1.0"
description = "Multi-agent AI Engineer system powered by LangGraph"
requires-python = ">=3.11"
dependencies = [
    "langgraph>=0.2",
    "langchain-openai>=0.2",
    "langchain-anthropic>=0.2",
    "langchain-community>=0.3",
    "slack-sdk>=3.27",
    "httpx>=0.27",
    "snowflake-connector-python>=3.6",
    "dbt-core>=1.7",
    "dbt-snowflake>=1.7",
    "typer>=0.12",
    "python-dotenv>=1.0",
    "rich>=13.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
]

[project.scripts]
ai-engineer = "src.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py311"
